# app/controllers/api/users_controller.rb
@@ -12,7 +12,7 @@ class Api::UsersController < ApplicationController
     respond_to do |format|
       if User.exists?(params[:id])
         @user = User.find(params[:id])
-        format.json { render json: @user, status: :ok}
+        format.json { render json: { id: @user.id, username: @user.email, karma: @user.karma, about: @user.about, created_at: @user.created_at}}
       else
         format.json { render json: {error: "error", code: 404, message: "User with id: " + params[:id].to_s + " does not exist"}, status: :not_found}
       end
@@ -44,20 +44,6 @@ class Api::UsersController < ApplicationController
     end
   end
 
-  # PATCH/PUT /api/v1/contributions/1
-  # PATCH/PUT /api/v1/contributions/1.json
-  def update
-    respond_to do |format|
-      if @api_v1_contribution.update(api_v1_contribution_params)
-        format.html { redirect_to @api_v1_contribution, notice: 'Contribution was successfully updated.' }
-        format.json { render :show, status: :ok, location: @api_v1_contribution }
-      else
-        format.html { render :edit }
-        format.json { render json: @api_v1_contribution.errors, status: :unprocessable_entity }
-      end
-    end
-  end
-
   # DELETE /api/v1/contributions/1
   # DELETE /api/v1/contributions/1.json
   def destroy
@@ -68,17 +54,37 @@ class Api::UsersController < ApplicationController
     end
   end
   
-  def updateprofile
+  def showMyProfile
     respond_to do |format|
-      if User.exists?(params[:id])
-        @user = User.find(params[:id])
-        @user.about = params[:About]
-        @user.save
-        format.json { render json: @user, status: :ok}
+      if request.headers['X-API-KEY'].present?
+        @token = request.headers['X-API-KEY'].to_s
+        if User.exists?(apiKey: @token)
+          @user  = User.find_by_apiKey(@token)
+          format.json { render json: { id: @user.id, username: @user.email, karma: @user.karma, about: @user.about, created_at: @user.created_at, apiKey: @user.apiKey}}
+        else
+          format.json { render json: {error: "error", code: 404, message: "User with id: " + @token + " does not exist"}, status: :not_found}
+        end
       else
-        format.json { render json: {error: "error", code: 404, message: "User with id: " + params[:id].to_s + " does not exist"}, status: :not_found}
+        format.json { render json:{status:"error", code:400, message: "Token is blank"}, status: :bad_request}
       end
-      
+    end
+  end
+  
+  def updateProfile
+    respond_to do |format|
+      if request.headers['X-API-KEY'].present?
+        @token = request.headers['X-API-KEY'].to_s
+        if User.exists?(apiKey: @token)
+          @user  = User.find_by_apiKey(@token)
+          @user.about = params[:About]
+          @user.save
+          format.json { render json: @user, status: :ok}
+        else
+          format.json { render json: {error: "error", code: 404, message: "User with id: " + @token + " does not exist"}, status: :not_found}
+        end
+      else
+        format.json { render json:{status:"error", code:400, message: "Token is blank"}, status: :bad_request}
+      end
     end
   end
 
